--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
 
       <!--The Logo-->
-      <img class="logo" src="./assets/images/logo.png" alt="logo" />
+      <img class="logo" src="../assets/images/logo.png" alt="logo" />
 
       <!--The Heading-->
       <h1>
@@ -24,7 +24,7 @@
 
       <!--Left Card-->
       <div class="left card">
-        <img class="tile-image" src="./assets/images/beautiful.jpg" alt="hand and flower in water" />
+        <img class="tile-image" src="../assets/images/beautiful.jpg" alt="hand and flower in water" />
         <h2 class="card-title">Beauty</h2>
         <p class="card-text">
           We strive to create the most beautiful websites for all your needs.
@@ -35,7 +35,7 @@
 
       <!--Right Card-->
       <div class="right card">
-        <img class="tile-image" src="./assets/images/construction.jpg" alt="metal structure" />
+        <img class="tile-image" src="../assets/images/construction.jpg" alt="metal structure" />
         <h2 class="card-title">Construction</h2>
         <p>
           Built by our team of professional developers, we ensure the most
